--- a/bitrise.yml
+++ b/bitrise.yml
@@ -7,7 +7,7 @@ app:
   - A_SECRET_PARAM: $A_SECRET_PARAM
   # If you want to share this step into a StepLib
   - BITRISE_STEP_ID: veracode-security
-  - BITRISE_STEP_VERSION: "0.0.1"
+  - BITRISE_STEP_VERSION: "1.0.0"
   - BITRISE_STEP_GIT_CLONE_URL: https://github.com/ryanphillipthomas/bitrise-step-veracode-security.git
   - MY_STEPLIB_REPO_FORK_GIT_URL: $MY_STEPLIB_REPO_FORK_GIT_URL
 
@@ -40,7 +40,12 @@ workflows:
           file if you would not specify another value.
         run_if: true
         inputs:
-        - example_step_input: Example Step Input's value
+        - veracode_api_id: null
+        - veracode_api_secret: null
+        - veracode_app_id: null
+        - file_upload_path: null
+        - auto_scan: true
+
     - script:
         inputs:
         - content: |
