--- a/bitrise.yml
+++ b/bitrise.yml
@@ -4,9 +4,9 @@ default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 app:
   envs:
   # If you want to share this step into a StepLib
-  - BITRISE_STEP_ID: bitrise-step-veracode-security
+  - BITRISE_STEP_ID: veracode-security
   - BITRISE_STEP_VERSION: "1.0.3"
-  - BITRISE_STEP_GIT_CLONE_URL: https://github.com/ryanphillipthomas/bitrise-step-veracode-security.git
+  - BITRISE_STEP_GIT_CLONE_URL: https://github.com/ryanphillipthomas/veracode-security.git
   - MY_STEPLIB_REPO_FORK_GIT_URL: $MY_STEPLIB_REPO_FORK_GIT_URL
 
   # define these in your .bitrise.secrets.yml
