--- a/bitrise.yml
+++ b/bitrise.yml
@@ -12,7 +12,9 @@ app:
   # define these in your .bitrise.secrets.yml
   - VERACODE_API_ID: $VERACODE_API_ID
   - VERACODE_API_SECRET: $VERACODE_API_SECRET
-  - VERACODE_APP_ID: $VERACODE_APP_ID
+  - VERACODE_APP_NAME: $VERACODE_APP_NAME
+  - VERACODE_APP_VERSION: $VERACODE_APP_VERSION
+  - VERACODE_SANDBOX: $VERACODE_SANDBOX
   - AUTO_SCAN: true
 
   # needed for upload test
@@ -33,7 +35,9 @@ workflows:
         inputs:
         - veracode_api_id: $VERACODE_API_ID
         - veracode_api_secret: $VERACODE_API_SECRET
-        - veracode_app_id: $VERACODE_APP_ID
+        - veracode_app_name: $VERACODE_APP_NAME
+        - veracode_app_version: $VERACODE_APP_VERSION
+        - veracode_sandbox: $VERACODE_SANDBOX
         - file_upload_path: $FILE_UPLOAD_PATH
         - auto_scan: $AUTO_SCAN
 
