--- a/step.yml
+++ b/step.yml
@@ -38,13 +38,23 @@ inputs:
       [https://help.veracode.com/r/c_api_credentials3](https://help.veracode.com/r/c_api_credentials3)
     is_sensitive: true
     is_required: true
-- veracode_app_id: null
+- veracode_app_name: null
   opts:
-    title: "Veracode Application ID"
+    title: "Veracode Application Name"
     description: |-
-      Your Veracode Application ID
+      Your Veracode Application Name
       [https://help.veracode.com/r/r_applications_info](https://help.veracode.com/r/r_applications_info)
     is_required: true
+- veracode_app_version: null
+  opts:
+    title: "Application Version"
+    description: |-
+      Your Application Version
+    is_required: true
+- veracode_sandbox: null
+  opts:
+    title: "Your Veracode Sandbox Name"
+    is_required: false
 - file_upload_path: null
   opts:
     title: "File Upload Path"
